# course_work_3course

./: .gitignore  docker-compose.yml  sats.db
back/: Dockerfile  auth.py  config.py  database.py  main.py  pyproject.toml
back/Building/: crud.py  models.py  router.py
back/Contract/: crud.py  models.py  router.py
back/Database/: router.py
back/Equipment/: crud.py  models.py  router.py  schemas.py
back/EquipmentSpecification/: crud.py  models.py  router.py
back/EquipmentStatus/: crud.py  models.py  router.py
back/EquipmentStatusType/: crud.py  models.py  router.py
back/EquipmentType/: crud.py  models.py  router.py
back/Job/: crud.py  models.py  router.py
back/License/: crud.py  models.py  router.py
back/Office/: crud.py  models.py  router.py
back/ResponsibleUser/: crud.py  models.py  router.py
back/ResponsibleUserJob/: crud.py  models.py
back/ResponsibleUserOffice/: crud.py  models.py
back/SessionLog/: crud.py  models.py  router.py
back/Software/: crud.py  models.py  router.py  schemas.py
back/SoftwareContract/: models.py
back/SystemRole/: crud.py  models.py  router.py
back/Token/: schemas.py
back/User/: crud.py  depends.py  models.py  router.py  schemas.py  user_router.py
front/: middleware.ts  package-lock.json  package.json
front/app/(root)/: layout.tsx
front/components/: crud-form-for-tables.tsx  data-table-combobox-filter.tsx  form-text-field.tsx  mobile-nav.tsx  navbar.tsx  sidebar.tsx
front/components/contracts-table/: data-table.tsx
front/components/equipment-status-table/: data-table.tsx  equipment-status-table.tsx
front/components/equipment-status-type-table/: data-table.tsx
front/components/ui/: accordion.tsx
front/constants/: index.ts
front/hooks/: use-user.ts
migrations/: env.py
(+16 files in other folders)
