[project]
name = "course-work-3course"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiosqlite==0.20.0",
    "alembic==1.14.0",
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "bcrypt==4.2.1",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "click==8.1.7",
    "colorama==0.4.6",
    "cryptography==43.0.3",
    "dnspython==2.7.0",
    "docx==0.2.4",
    "ecdsa==0.19.0",
    "email-validator==2.2.0",
    "et-xmlfile==2.0.0",
    "fastapi==0.115.5",
    "fastapi-cli==0.0.5",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.27.2",
    "idna==3.10",
    "jinja2==3.1.4",
    "jose==1.0.0",
    "jwt==1.3.1",
    "lxml==5.3.1",
    "mako==1.3.6",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "numpy==2.2.1",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "passlib==1.7.4",
    "pillow==11.1.0",
    "pyasn1==0.6.1",
    "pycparser==2.22",
    "pydantic==2.10.1",
    "pydantic-core==2.27.1",
    "pydantic-settings==2.6.1",
    "pygments==2.18.0",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.1.2",
    "python-dotenv==1.0.1",
    "python-jose==3.3.0",
    "python-multipart==0.0.17",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "rich==13.9.4",
    "rsa==4.9",
    "shellingham==1.5.4",
    "six==1.16.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.36",
    "starlette==0.41.3",
    "typer==0.13.1",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "uvicorn==0.32.1",
    "watchfiles==0.24.0",
    "websockets==14.1",
]
